# beaglebot

./: .cproject  .project  BB-PRUTEST-00A0.dts  CMakeLists.txt  Makefile  README.md  SensorDataLog.cpp  SensorDataLog.h  firmware.p  main.cpp  prussdrv.c
device_tree/: bb-overlay.sh
tools/pru_test/: .cproject  CMakeLists.txt  README.md  README.txt  SensorDataLog.cpp  SensorDataLog.h  firmware.p  main.cpp
tools/sd-bkup-emmc/: autorun.sh  sd-bkup.sh
